# cryptor

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: build.yml
po/: LINGUAS  POTFILES  cryptor.pot  de.po  en.po  meson.build  ru.po
resources/: ui.gresource.xml
resources/misc/: cryptor.desktop
resources/ui/: AboutWindow.ui  CryptorWindow.ui  SettingsWindow.ui  VaultWindow.ui
src/: Config.vala  CryptorApp.vala  Gocrypt.vala
src/data/: Vault.vala
src/ui/: AboutWindow.vala  CryptorWindow.vala  SettingsWindow.vala  Utils.vala  VaultWindow.vala
